# readfence

./: CHANGELOG.md  Cargo.toml  README.md  dist-workspace.toml
.github/: build-setup.yml
.github/workflows/: release.yml
flatpak/: README.md  cargo-sources.json  com.readfence.Readfence.desktop  com.readfence.Readfence.metainfo.xml  com.readfence.Readfence.yaml
src/: app.rs  files.rs  main.rs  markdown_text.rs  messages.rs  selection_group.rs  styles.rs  update.rs  updates.rs  view.rs
wix/: main.wxs
