[package]
name = "readfence"
version = "0.1.3"
edition = "2024"
description = "A clean, modern Markdown viewer for developers"
authors = ["SignalPeak Media LLC"]
license = "MIT"
repository = "https://github.com/adamwhiles/readfence"
homepage = "https://github.com/adamahiles/readfence"
keywords = ["markdown", "viewer", "developer-tools", "iced"]
categories = ["text-editors"]
readme = "README.md"

[package.metadata.wix]
upgrade-guid = "04A82975-A2C4-4F47-90C7-951F2401DC6D"
path-guid = "22F98BE6-E414-4EF1-A2C6-6B67650A1A6E"
license = false
eula = false

[[bin]]
name = "readfence"
path = "src/main.rs"

[dependencies]
iced = { version = "0.14.0", features = ["markdown", "highlighter", "tokio"] }
rfd = "0.17.2"
open = "5"
tokio = { version = "1", features = ["fs", "time"] }
image = { version = "0.25", default-features = false, features = ["png"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
